--- a/pages/resume_zh.html
+++ b/pages/resume_zh.html
@@ -32,9 +32,12 @@
                 <p class="font-light  text-white bg-jOrange inline p-1">網頁前端工程師</p>
               </div>
               <p class="pt-3 pb-4 text-xl font-medium text-gray-700">我有多年網站設計經驗，擅長 RWD 網頁設計、目前自學 React，正在製作專案中！</p>
-              <div class="flex">
-                <img width="24" height="24" src="https://img.icons8.com/material-sharp/24/github.png" alt="github"/>
-                <a href=""><img width="30" height="30" src="https://img.icons8.com/sf-regular-filled/30/medium-logo.png" alt="medium-logo"/></a>
+              <div class="flex flex-wrap">
+                <a href="https://github.com/WenJenChun" target="_blank">                
+                  <img width="36" height="36" src="https://img.icons8.com/material-sharp/36/github.png" alt="github"/>
+                </a>
+                <a href="https://medium.com/@wenrenjune" target="_blank">
+                  <img width="40" height="40" src="https://img.icons8.com/sf-regular-filled/40/medium-logo.png" alt="medium-logo"/></a>
               </div>
               <div class="flex justify-center sm:hidden">
                 <img src="./public/june_portrait.png" alt="June Wen" class="mr-4 h-80 object-cover">
@@ -266,7 +269,7 @@
 
     <!-- certificate -->
     <div class="bg-indigo-300 pb-12 pt-12">
-      <h2 class="text-2xl font-bold py-4 text-center text-emerald-700">證照</h2>
+      <h2 class="text-2xl font-bold py-4 text-center">證照</h2>
       <div class="max-w-screen-lg mx-auto">
         <!-- <div class="container"> -->
           <div class="container flex justify-between items-center">
