--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="bg-intro py-4">
       <nav class="flex justify-center sm:justify-between space-x-4 container mx-auto px-4 max-w-screen-lg">
-        <img id="backToIndex" src="./public/junew_orange.png" alt="" class="h-8">
+        <img id="backToIndex" src="../public/junew_orange.png" alt="" class="h-8">
         <div class="flex content-center hidden sm:block">
           <a href="#service" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">Service</a>
           <a href="#portfolio" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">Portfolio</a>
@@ -25,7 +25,7 @@
     <div class="bg-intro">
       <div class="container mx-auto pt-4 px-16 max-w-screen-lg">
           <div class="md:flex md:flex-row">
-          <img src="./public/june_portrait.png" alt="June Wen" class="h-80 object-cover hidden sm:block sm:float-right">
+          <img src="../public/june_portrait.png" alt="June Wen" class="h-80 object-cover hidden sm:block sm:float-right">
             <div id="titleLabel">
               <h1 class="font-medium text-4xl mt-2 text-center text-jBlack sm:text-left sm:mt-12 ">Hello!<br>I'm <span class="font-black text-indigo-700">June Wen</span></h1>
               <div class="text-center mt-3 sm:text-left sm:pt-2 sm:mt-1">
@@ -33,7 +33,7 @@
               </div>
               <p class="pt-3 pb-4 text-xl font-medium text-gray-700">Welcome to my collection of engaging digital experiences. Discover my creations, and let's craft something remarkable together.</p>
               <div class="flex justify-center sm:hidden">
-                <img src="./public/june_portrait.png" alt="June Wen" class="mr-4 h-80 object-cover">
+                <img src="../public/june_portrait.png" alt="June Wen" class="mr-4 h-80 object-cover">
               </div> 
             </div>
           </div>
@@ -127,7 +127,7 @@
         <div class="flex flex-wrap justify-between">
           <div id="care168" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-3">
-              <img src="./public/work_care168.png" alt="">
+              <img src="../public/work_care168.png" alt="">
             </div>
             <h4 class="mt-4 mb-1 font-black">Care168 Carer Matching Platform</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -138,7 +138,7 @@
           </div>
           <div id="lady2" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_lady_two.png" alt="">
+              <img src="../public/work_lady_two.png" alt="">
             </div>
             <h4 class="mt-4 mb-1 font-black">Lady Two Dessert Website</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">RWD</p>
@@ -148,7 +148,7 @@
          
           <div id="chijiaTech" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_chijia.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="../public/work_chijia.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">Chijia Technology Official Website</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">RWD</p>
@@ -158,7 +158,7 @@
           </div>
           <div id="propertyCard" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_property.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="../public/work_property.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">Property Agent Personal Website</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Django</p>
@@ -171,7 +171,7 @@
 
           <div id="busRental" class=" mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-100% md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_bus.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="../public/work_bus.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">Tour Bus Rental App</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -181,7 +181,7 @@
           </div>
           <div id="stockAnalysis" class=" mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-100% md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_stock.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="../public/work_stock.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">Stock Analysis App</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -239,7 +239,7 @@
       <p class="text-white text-center">© JUNEW 2024</p>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../main.js"></script>
     <script src="https://kit.fontawesome.com/ed35b1b942.js" crossorigin="anonymous"></script>
 
   </body>
