--- a/pages/resume_zh.html
+++ b/pages/resume_zh.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>June Wen - 個人履歷</title>
-    <script type="module" crossorigin src="/junew-portfolio/assets/main-DwrGhlEd.js"></script>
-    <link rel="stylesheet" crossorigin href="/junew-portfolio/assets/main-B1g80vSX.css">
+    <script type="module" crossorigin src="/junew-portfolio/assets/main-_gKcXi5N.js"></script>
+    <link rel="stylesheet" crossorigin href="/junew-portfolio/assets/main-CbltmOOV.css">
   </head>
   <body>
     <header class="bg-intro py-4">
       <nav class="flex justify-center sm:justify-between space-x-4 container mx-auto px-4 max-w-screen-lg">
-        <img id="backToIndex" src="./public/junew_orange.png" alt="" class="h-8">
+        <img id="backToIndex" src="/junew-portfolio/assets/junew_orange-BeYLznNp.png" alt="" class="h-8">
         <div class="flex content-center hidden sm:block">
           <a href="#service" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">技能</a>
           <a href="#portfolio" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">作品</a>
@@ -27,7 +27,7 @@
     <div class="bg-intro">
       <div class="container mx-auto pt-4 px-16 max-w-screen-lg">
           <div class="md:flex md:flex-row">
-          <img src="./public/june_portrait.png" alt="June Wen" class="h-80 object-cover hidden sm:block sm:float-right">
+          <img src="/junew-portfolio/assets/june_portrait-8Bp2BG8G.png" alt="June Wen" class="h-80 object-cover hidden sm:block sm:float-right">
             <div id="titleLabel">
               <h1 class="font-medium text-4xl mt-2 text-center text-jBlack sm:text-left sm:mt-12 ">你好，我是 <span class="font-black text-indigo-700">June</span><br>可以叫我<span class="font-black text-indigo-700"> 小君</span>！</h1>
               <div class="text-center mt-3 sm:text-left sm:pt-2 sm:mt-1">
@@ -42,7 +42,7 @@
                   <img width="40" height="40" src="https://img.icons8.com/sf-regular-filled/40/medium-logo.png" alt="medium-logo"/></a>
               </div>
               <div class="flex justify-center sm:hidden">
-                <img src="./public/june_portrait.png" alt="June Wen" class="mr-4 h-80 object-cover">
+                <img src="/junew-portfolio/assets/june_portrait-8Bp2BG8G.png" alt="June Wen" class="mr-4 h-80 object-cover">
               </div> 
             </div>
           </div>
@@ -194,7 +194,7 @@
         <div class="flex flex-wrap justify-between">
           <div id="care168" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-3">
-              <img src="./public/work_care168.png" alt="">
+              <img src="/junew-portfolio/assets/work_care168-BHFN8dyL.png" alt="">
             </div>
             <h4 class="mt-4 mb-1 font-black">Care168 照服員媒合平台</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -205,7 +205,7 @@
           </div>
           <div id="lady2" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_lady_two.png" alt="">
+              <img src="/junew-portfolio/assets/work_lady_two-CzgT2ZoY.png" alt="">
             </div>
             <h4 class="mt-4 mb-1 font-black">Lady Two 二小姐甜點官網</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">RWD</p>
@@ -214,7 +214,7 @@
           </div>
           <div id="chijiaTech" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_chijia.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="/junew-portfolio/assets/work_chijia-Cl7YYlTQ.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">齊家科技官網</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">RWD</p>
@@ -224,7 +224,7 @@
           </div>
           <div id="propertyCard" class="bg-white mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-11/12 md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_property.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="/junew-portfolio/assets/work_property-DQmIxgEo.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">房仲名片網官網</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Django</p>
@@ -236,7 +236,7 @@
           </div>
           <div id="busRental" class=" mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-100% md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_bus.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="/junew-portfolio/assets/work_bus-DDlTYZL8.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">巴士租賃 App</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -246,7 +246,7 @@
           </div>
           <div id="stockAnalysis" class=" mx-auto mt-4 px-4 py-6 shadow-lg rounded text-left w-100% md:w-80 lg:max-w-80 hover:cursor-pointer">
             <div class="bg-gradient-to-br from-slate-50 to-zinc-200 p-4">
-              <img src="./public/work_stock.png" alt="" class="mx-auto max-h-80 md:max-h-40">
+              <img src="/junew-portfolio/assets/work_stock-9ykpCGc8.png" alt="" class="mx-auto max-h-80 md:max-h-40">
             </div>
             <h4 class="mt-4 mb-1 font-black">財報先生 App</h4>
             <p class="rounded-full bg-indigo-300 text-white text-sm px-2 py-0.5 inline">Flutter</p>
@@ -276,10 +276,10 @@
         <!-- <div class="container"> -->
           <div class="container flex justify-between items-center">
             <div class="mx-auto p-4">
-                <img src="./public/certificate_Udacity.png" alt="" class="">
+                <img src="/junew-portfolio/assets/certificate_Udacity-dKEJsUbO.png" alt="" class="">
             </div>
             <div class="mx-auto p-4">
-              <img src="./public/certificate_HexSchool.png" alt="" class="">
+              <img src="/junew-portfolio/assets/certificate_HexSchool-YXGjLuDu.png" alt="" class="">
             </div>
           </div>
         <!-- </div> -->
