--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>June Wen</title>
-    <script type="module" crossorigin src="/junew-portfolio/assets/main-CuGBGigu.js"></script>
-    <link rel="stylesheet" crossorigin href="/junew-portfolio/assets/main-CbltmOOV.css">
+    <script type="module" crossorigin src="/junew-portfolio/assets/main-GFSvrYXd.js"></script>
+    <link rel="stylesheet" crossorigin href="/junew-portfolio/assets/main-CB2Kj3Jm.css">
   </head>
   <body>
     <header class="bg-intro py-4">
@@ -204,6 +204,9 @@
         </button>
         <div id="modal-content" class="text-left"></div>
       </div>
+    </div>
+
+    <div class="bg-yellow-300 py-2">
     </div>
 
 
