--- a/resume_zh.html
+++ b/resume_zh.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>June Wen - 個人履歷</title>
-    <script type="module" crossorigin src="/junew-portfolio/assets/main-joeamg7S.js"></script>
+    <script type="module" crossorigin src="/junew-portfolio/assets/main-JXAlZGNN.js"></script>
     <link rel="stylesheet" crossorigin href="/junew-portfolio/assets/main-DcagofDf.css">
   </head>
   <body>
@@ -74,7 +74,7 @@
             <p class="font-light my-3 text-justify">
               我具備 CMS 平台（如 WordPress、Shopify、Wix）的網站建立與維護能力，
               擅長包括 HTML5、CSS3、及 Tailwind CSS 和 Bootstrap 的前端開發技術，能夠獨立設計並實現響應式網站。
-              我參與多個 Flutter 專案的開發，也有 Django 串接網頁及 RESTful API 的經驗。此外，我也擅長手機和網頁 UI 設計，
+              我參與多個 Flutter 專案的開發，也有 Django 串接網頁及 RESTful API 的經驗。此外，我也有手機和網頁 UI 設計的經驗。
             </p>
           </div>
 
@@ -170,7 +170,7 @@
         <h2 class="text-2xl font-bold pt-4">個人專案</h2>
       </div>
     </div>
-    
+
     <!-- personal project -->
     <div class="bg-teal-500 pb-12">
       <div class="container mx-auto max-w-screen-lg">
@@ -182,7 +182,7 @@
             <h2 class="font-black text-2xl text-white mb-2 text-center bg-jOrange py-1 border-b-4 border-b-yellow-400">台灣人在英國生活情報</h2>
             <p class="font-light my-3 text-justify text-white ">
               這是一個以 React 為框架的資訊網站，目標使用者為在英國生活的台灣人。靈感來自於過去在英國打工期間，遇上異國生活的種種挑戰，想找資訊卻發現網路社群資源、訊息分散不易搜尋的問題，因此催生建立這個資訊平台。
-              <br><br>目前網站仍在開發中，內容將使用 json-server-auth 及 Render 完成 API 串接。
+              <br><br>目前網站仍在開發中，內容將使用 json-server 及 Render 完成 API 串接。
             </p>
             <a href="https://wenjenchun.github.io/taiwanese_in_the_uk/" target="_blank" ><i class="fa-solid fa-link text-white"></i><p class="inline text-white ms-1">進入網站</p></a>
           </div>
@@ -300,7 +300,7 @@
 
     <!-- footer -->
     <footer class="bg-jBlack py-8">
-      <p class="text-white text-center text-sm mb-2">本頁面使用技術&工具：Vite、Vanilla、Tailwind、GSAP、GitPages、FontAwesome、Icon8</p>
+      <p class="text-white text-center text-sm mb-2">本頁面使用技術、工具、資源：Vite、Vanilla、Tailwind、GSAP、GitPages、FontAwesome、Icon8</p>
       <p class="text-white text-center">© JUNEW 2024</p>
     </footer>
 
