--- a/pages/resume_zh.html
+++ b/pages/resume_zh.html
@@ -14,6 +14,8 @@
       <nav class="flex justify-center sm:justify-between space-x-4 container mx-auto px-4 max-w-screen-lg">
         <img id="backToIndex" src="../assets/junew_orange.png" alt="" class="h-8">
         <div class="flex content-center hidden sm:block">
+          <a href="https://github.com/WenJenChun" target="_blank" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">GitHub</a>
+          <a href="https://medium.com/@wenrenjune" target="_blank" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">技術筆記</a>
           <a href="#service" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">技能</a>
           <a href="#portfolio" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">作品</a>
           <a href="#certificate" class="font-medium px-3 py-2 text-jBlack hover:text-indigo-700 hover:font-black">證照</a>
