--- a/pages/resume_zh.html
+++ b/pages/resume_zh.html
@@ -31,10 +31,10 @@
             <div id="titleLabel">
               <h1 class="font-medium text-4xl mt-2 text-center text-jBlack sm:text-left sm:mt-12 ">你好，我是 <span class="font-black text-indigo-700">June</span><br>可以叫我<span class="font-black text-indigo-700"> 小君</span>！</h1>
               <div class="text-center mt-3 sm:text-left sm:pt-2 sm:mt-1">
-                <p class="font-light tracking-widest text-white bg-jOrange inline p-1">網頁前端工程師</p>
+                <p class="font-light tracking-widest text-white bg-jOrange inline p-1">網頁前端工程師、Flutter工程師</p>
               </div>
               <p class="pt-3 pb-4 text-xl font-medium text-gray-700">
-                我有豐富的行銷美編經驗，2021 年自學 HTML、CSS 等前端技能後，愛上網頁設計與開發的挑戰，我擅長響應式網頁設計，並具備手機應用程式開發的實戰經驗。
+                我有豐富的行銷美編經驗，2021 年自學 HTML、CSS，同時期也接觸 Flutter 手機應用程式開發，我熱衷網頁設計與開發，喜歡將需求化為手機 App 實用工具的一連串挑戰。
               </p>
               <div class="flex flex-wrap">
                 <a href="https://github.com/WenJenChun" target="_blank">                
